[package]
name = "solana-vote-program"
version = "0.0.1"
description = "Solana Vote Program"
authors = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
edition = { workspace = true }

[package.metadata.solana]
program-id = "Vote111111111111111111111111111111111111111"

[features]
bpf-entrypoint = []
test-sbf = []

[dependencies]
solana-program = { workspace = true }

[dev-dependencies]

[lib]
crate-type = ["cdylib", "lib"]

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]
